--- a/View/LoaiCoSoView.xaml
+++ b/View/LoaiCoSoView.xaml
@@ -83,7 +83,7 @@ materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"/>
             <materialDesign:Card Grid.Row="2" Margin="0,10,0,0" VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding LoaiCoSoList}"
-                          SelectedItem="{Binding SelectedLoaiCoSo, Mode=OneWayToSource}"
+                          SelectedItem="{Binding SelectedLoaiCoSo, Mode=TwoWay}"
                           HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <ListView.View>
                             <GridView>
