--- a/View/Chinh_sua_thong_tin.xaml
+++ b/View/Chinh_sua_thong_tin.xaml
@@ -19,7 +19,7 @@ WindowStyle="None"
       Name="CDHCView"
       WindowStartupLocation="Manual"
         Title="Chinh_sua_thong_tin" Height="750" Width="1100">
-    <Grid Background="#FF68CE44">
+    <Grid Background="pink">
         <Border Height="430" CornerRadius="15" Margin="361,0,360,0" VerticalAlignment="Center" >
             <Border.Background>
                 <SolidColorBrush Color="White" Opacity="0.5"/>
