--- a/View/CapDoHanhChinhView.xaml
+++ b/View/CapDoHanhChinhView.xaml
@@ -8,7 +8,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         DataContext="{StaticResource CDHCVM}"
-        Background="{DynamicResource MaterialDesignPaper}"
+        Background="DarkBlue"
         FontFamily="{DynamicResource MaterialDesignFont}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -19,7 +19,7 @@
   WindowStyle="None"
         Name="CDHCView"
         WindowStartupLocation="Manual"
-        Title="Quản lý cấp hành chính" Height="750" Width="1150">
+        Title="Quản lý cấp hành chính" Height="770" Width="1165">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
