--- a/View/Chinh_sua_thong_tin.xaml
+++ b/View/Chinh_sua_thong_tin.xaml
@@ -74,7 +74,7 @@ WindowStyle="None"
 
                 <Border Height="50" Width="300" Background="ForestGreen" CornerRadius="10" Margin="0,0,0,87" VerticalAlignment="Bottom" HorizontalAlignment="Center" >
                     <Grid Margin="0 0 0 0">
-                        <materialDesign:PackIcon Kind="Home"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
+                        <materialDesign:PackIcon Kind="MapMarkerRadius"  VerticalAlignment="Center" Height="40" Width="40" Margin="5,0,0,0" Foreground="White" />
                         <Border Padding="0" CornerRadius="0 10 10 0" Background="White" Height="50" Width="250" HorizontalAlignment="Right" >
                             <TextBox 
                                 materialDesign:HintAssist.Hint="Đơn vị hành chính"
