--- a/View/VungTrongView.xaml
+++ b/View/VungTrongView.xaml
@@ -14,9 +14,9 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-                        ResizeMode="NoResize"
-WindowStyle="None"
-WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
+        WindowStyle="None"
+        WindowStartupLocation="Manual"
         Name="VTView"
         Title="Quản lý vùng trồng" Height="600" Width="900">
 
