--- a/View/CoSoVietGap.xaml
+++ b/View/CoSoVietGap.xaml
@@ -9,9 +9,9 @@
         DataContext="{StaticResource CSPBVM}"
         Title="Quản lý Cơ sở" Height="600" Width="900"
         Name="CSPBView"
-                ResizeMode="NoResize"
-WindowStyle="None"
-WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
+        WindowStyle="None"
+        WindowStartupLocation="Manual"
         Background="{DynamicResource MaterialDesignPaper}">
 
     <Grid Margin="10">
