--- a/View/LoaiCoSoView.xaml
+++ b/View/LoaiCoSoView.xaml
@@ -15,9 +15,9 @@
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         Name="LCSView"
-                ResizeMode="NoResize"
-WindowStyle="None"
-WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
+        WindowStyle="None"
+        WindowStartupLocation="Manual"
         Title="Quản lý loại cơ sở" Height="600" Width="900">
 
 
