--- a/View/QuanLyNguoiDungView.xaml
+++ b/View/QuanLyNguoiDungView.xaml
@@ -9,7 +9,7 @@
         DataContext="{StaticResource QLNDVM}"
                 ResizeMode="NoResize"
         WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
+        WindowStartupLocation="Manual"
         Title="Quản lý Người Dùng" Height="600" Width="1000"
         Name="QLNDView"
         Background="#F0F4F8">
